# EmptyCmakeProj

./: CMakeLists.txt  Makefile  README.md  cmake_shell.sh
Test/: CMakeLists.txt
Test/include/: headers.h
Test/src/: Main.cpp
